refactor: updated some legacy code implementations across codebase